# notify_on_docker_failure

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh  compile_flags.txt  config.toml  mate.c
include/: dotenv.c  mate.h  toml.h
src/: api_request.c  api_request.h  attach.c  attach.h  config.c  config.h  main.c
